<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/listview_indicator_size">

    <ImageView
        android:id="@+id/imageview_group_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:cropToPadding="true"
        android:src="@drawable/ic_wifi_green"
        android:contentDescription="@string/content_description_wifi_icon"/>

    <TextView
        android:id="@+id/textview_group_ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/imageview_group_icon"
        android:text="@string/filler_ssid"
        android:textColor="@color/primary_text_color" />

    <TextView
        android:id="@+id/textview_group_bssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textview_group_ssid"
        android:text="@string/filler_bssid"
        android:textStyle="italic" />

	<TextView
	    android:id="@+id/label_group_timestamp"
	    style="@style/SmallText.Alt"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:text="@string/label_timestamp" />

   <TextView
       android:id="@+id/textview_group_timestamp"
       style="@style/MediumText.Italic"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="2dp"
       android:text="@string/filler_timestamp" />
</RelativeLayout>